# uni-mcp-gateway

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  audit.py  auth.py  dashboard.py  external_mcp.py  fly.toml.example  main.py  media.py  plugin_base.py  pyproject.toml  supervisord.conf
plugins/: __init__.py  _example.py  ai_ark.py  bigquery.py  bison.py  calendly.py  coldmessage_slash.py  gmail.py  instantly.py  linear.py  notion.py  slack.py
plugins/whatsapp/: __init__.py  whatsapp.py
whatsapp-bridge/: main.go
