[project]
name = "uni-mcp-gateway"
version = "1.0.0"
description = "Unified MCP Gateway — aggregate multiple MCP servers behind a single endpoint with auth, rate limiting, and audit logging"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.6.0",
    "httpx>=0.27.0",
    "starlette>=0.41.0",
    "uvicorn>=0.32.0",
    "python-multipart>=0.0.9",
    "requests>=2.31.0",
    "playwright>=1.49.0",
    "slack_sdk>=3.33.0",
    "websocket-client>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
